--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react-google-recaptcha": "^2.1.0",
         "react-router-dom": "5.1.2",
         "react-scripts": "3.4.1",
+        "react-seo": "^1.0.11",
         "reactstrap": "8.4.1"
     },
     "scripts": {
